Kafka stream with state store and materialized view

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,14 @@ jwt.get.category.url=/category/**
 jwt.get.catentry.url=/catentry/**
 jwt.audience=web
 
-kafka.bootstrap.servers=localhost:9092
-kafka.topic.category=catalog.commerce.category
+kafka.config.bootstrap.servers=localhost:9092
+kafka.config.application_id=catalog.application
+kafka.config.schema.registry.url=http://localhost:8081
+kafka.config.state.store.directory=/tmp/kafka-state-store
+
+kafka.topic.category=mongo.catalog.category
+kafka.topic.catentry=mongo.catalog.catentry
+kafka.store.category=store.catalog.category
 
 logging.file=SystemOut.log
 
