--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<spring-kafka.version>1.2.2.RELEASE</spring-kafka.version>
+		<kafka.version>1.0.0-cp1</kafka.version>
 	</properties>
 
 	<repositories>
@@ -57,9 +58,19 @@
 			<version>4.0.0</version>
 		</dependency>
 		<dependency>
+			<groupId>io.confluent</groupId>
+			<artifactId>kafka-streams-avro-serde</artifactId>
+			<version>4.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.kafka</groupId>
+			<artifactId>kafka-clients</artifactId>
+			<version>${kafka.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.kafka</groupId>
 			<artifactId>kafka-streams</artifactId>
-			<version>0.10.2.0</version>
+			<version>${kafka.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.slf4j</groupId>
